[package]
name = "extract-samsung-firmware"
version = "0.1.1"
authors = ["Shuhao Tan <johnmave126@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A utility to extract Samsung SSD firmware updator from iso image"
keywords = ["cli", "samsung", "firmware"]
categories = ["command-line-utilities"]

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.0", features = ["derive"] }
# cpio-archive = "0.7.0"
# TODO: change to upstream after new release enters crates.io
cpio-archive = { git = "https://github.com/indygreg/apple-platform-rs.git" }
flate2 = "1.0.27"
iso9660 = "0.1.1"
path-slash = "0.2.1"
